refactor: swagger & minor changes
