# app/monolith/internal/docs/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/restaurant.CreateRestaurantDTO"
+                            "$ref": "#/definitions/dto.CreateRestaurantDTO"
                         }
                     }
                 ],
@@ -71,7 +71,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.AuthDataLogin"
+                            "$ref": "#/definitions/dto.AuthDataLogin"
                         }
                     }
                 ],
@@ -79,7 +79,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.JwtPair"
+                            "$ref": "#/definitions/ro.JwtPair"
                         }
                     },
                     "400": {
@@ -110,7 +110,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.AuthDataRefresh"
+                            "$ref": "#/definitions/dto.AuthDataRefresh"
                         }
                     }
                 ],
@@ -118,7 +118,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.JwtPair"
+                            "$ref": "#/definitions/ro.JwtPair"
                         }
                     },
                     "400": {
@@ -149,7 +149,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.AuthDataRegister"
+                            "$ref": "#/definitions/dto.AuthDataRegister"
                         }
                     }
                 ],
@@ -157,7 +157,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.JwtPair"
+                            "$ref": "#/definitions/ro.JwtPair"
                         }
                     },
                     "400": {
@@ -200,7 +200,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/estimate.CreateEstimateDTO"
+                            "$ref": "#/definitions/dto.CreateEstimateDTO"
                         }
                     }
                 ],
@@ -573,7 +573,7 @@
         }
     },
     "definitions": {
-        "auth.AuthDataLogin": {
+        "dto.AuthDataLogin": {
             "type": "object",
             "required": [
                 "email",
@@ -588,7 +588,7 @@
                 }
             }
         },
-        "auth.AuthDataRefresh": {
+        "dto.AuthDataRefresh": {
             "type": "object",
             "required": [
                 "refreshToken"
@@ -599,7 +599,7 @@
                 }
             }
         },
-        "auth.AuthDataRegister": {
+        "dto.AuthDataRegister": {
             "type": "object",
             "required": [
                 "email",
@@ -626,19 +626,69 @@
                 }
             }
         },
-        "auth.JwtPair": {
+        "dto.CreateEstimateDTO": {
             "type": "object",
+            "required": [
+                "description",
+                "name",
+                "value"
+            ],
             "properties": {
-                "accessExpiresIn": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2
+                },
+                "value": {
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 1
+                }
+            }
+        },
+        "dto.CreateRestaurantDTO": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "address": {
                     "type": "string"
                 },
-                "accessToken": {
+                "city": {
                     "type": "string"
                 },
-                "refreshExpiresIn": {
+                "country": {
                     "type": "string"
                 },
-                "refreshToken": {
+                "description": {
+                    "type": "string"
+                },
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "kitchenType": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "metadata": {
+                    "type": "object",
+                    "additionalProperties": {}
+                },
+                "name": {
+                    "type": "string"
+                },
+                "site": {
                     "type": "string"
                 }
             }
@@ -786,31 +836,6 @@
                 "RoleHelper"
             ]
         },
-        "estimate.CreateEstimateDTO": {
-            "type": "object",
-            "required": [
-                "description",
-                "name",
-                "value"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 2
-                },
-                "name": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 2
-                },
-                "value": {
-                    "type": "integer",
-                    "maximum": 100,
-                    "minimum": 1
-                }
-            }
-        },
         "helper.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -831,44 +856,19 @@
                 }
             }
         },
-        "restaurant.CreateRestaurantDTO": {
+        "ro.JwtPair": {
             "type": "object",
-            "required": [
-                "name"
-            ],
             "properties": {
-                "address": {
+                "accessExpiresIn": {
                     "type": "string"
                 },
-                "city": {
+                "accessToken": {
                     "type": "string"
                 },
-                "country": {
+                "refreshExpiresIn": {
                     "type": "string"
                 },
-                "description": {
-                    "type": "string"
-                },
-                "images": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "kitchenType": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "metadata": {
-                    "type": "object",
-                    "additionalProperties": {}
-                },
-                "name": {
-                    "type": "string"
-                },
-                "site": {
+                "refreshToken": {
                     "type": "string"
                 }
             }
